// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|A11y/BaseButton Default 1`] = `
<button
  type="button"
/>
`;

exports[`Storyshots Addons|A11y/BaseButton Disabled 1`] = `
<button
  disabled=""
  type="button"
>
  Testing the a11y addon
</button>
`;

exports[`Storyshots Addons|A11y/BaseButton Invalid contrast 1`] = `
<button
  style="color:black;background-color:black"
  type="button"
>
  Testing the a11y addon
</button>
`;

exports[`Storyshots Addons|A11y/BaseButton Label 1`] = `
<button
  type="button"
>
  Testing the a11y addon
</button>
`;

exports[`Storyshots Addons|A11y/BaseButton delayed render 1`] = `<div />`;

exports[`Storyshots Addons|A11y/Button Content 1`] = `
<button
  style="padding:12px 6px;font-size:12px;line-height:16px;border-radius:5px;background-color:#028402;color:#ffffff"
  type="button"
>
  Testing the a11y addon
</button>
`;

exports[`Storyshots Addons|A11y/Button Default 1`] = `
<button
  style="padding:12px 6px;font-size:12px;line-height:16px;border-radius:5px;background-color:#028402;color:#ffffff"
  type="button"
>
  null
</button>
`;

exports[`Storyshots Addons|A11y/Button Disabled 1`] = `
<button
  disabled=""
  style="padding:12px 6px;font-size:12px;line-height:16px;border-radius:5px;background-color:#028402;color:#ffffff"
  type="button"
>
  Testing the a11y addon
</button>
`;

exports[`Storyshots Addons|A11y/Button Invalid contrast 1`] = `
<button
  style="padding:12px 6px;font-size:12px;line-height:16px;border-radius:5px;color:#ffffff;background-color:#4caf50"
  type="button"
>
  Testing the a11y addon
</button>
`;

exports[`Storyshots Addons|A11y/Button Label 1`] = `
<button
  style="padding:12px 6px;font-size:12px;line-height:16px;border-radius:5px;background-color:#028402;color:#ffffff"
  type="button"
>
  null
</button>
`;

exports[`Storyshots Addons|A11y/Form With label 1`] = `
.emotion-2 {
  width: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 8px 0;
  border-bottom: 1px solid rgba(0,0,0,0.1);
  padding: 0 8px 8px 8px;
}

.emotion-2:last-child {
  border-bottom: 0 none;
  padding-bottom: 0;
}

.emotion-0 {
  min-width: 100px;
  min-height: 32px;
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.emotion-1 {
  padding: 0 10px;
  color: #333;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  display: inline;
  text-align: left;
  min-height: 32px;
}

.emotion-1:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

<label
  class="emotion-2"
>
  <span
    class="emotion-0"
  >
    <span>
      Testing the a11y addon
    </span>
  </span>
  <input
    class="emotion-1"
    id="1"
  />
</label>
`;

exports[`Storyshots Addons|A11y/Form With placeholder 1`] = `
.emotion-1 {
  width: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 8px 0;
  border-bottom: 1px solid rgba(0,0,0,0.1);
  padding: 0 8px 8px 8px;
}

.emotion-1:last-child {
  border-bottom: 0 none;
  padding-bottom: 0;
}

.emotion-0 {
  padding: 0 10px;
  color: #333;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  display: inline;
  text-align: left;
  min-height: 32px;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

<label
  class="emotion-1"
>
  <input
    class="emotion-0"
    id="1"
    placeholder="Testing the a11y addon"
  />
</label>
`;

exports[`Storyshots Addons|A11y/Form Without Label 1`] = `
.emotion-1 {
  width: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 8px 0;
  border-bottom: 1px solid rgba(0,0,0,0.1);
  padding: 0 8px 8px 8px;
}

.emotion-1:last-child {
  border-bottom: 0 none;
  padding-bottom: 0;
}

.emotion-0 {
  padding: 0 10px;
  color: #333;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  display: inline;
  text-align: left;
  min-height: 32px;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

<label
  class="emotion-1"
>
  <input
    class="emotion-0"
  />
</label>
`;

exports[`Storyshots Addons|A11y/Image Presentation 1`] = `
.emotion-0 {
  display: block;
}

<img
  class="emotion-0"
  role="presentation"
  src="http://placehold.it/350x150"
/>
`;

exports[`Storyshots Addons|A11y/Image With alt 1`] = `
.emotion-0 {
  display: block;
}

<img
  alt="Testing the a11y addon"
  class="emotion-0"
  src="http://placehold.it/350x150"
/>
`;

exports[`Storyshots Addons|A11y/Image Without alt 1`] = `
.emotion-0 {
  display: block;
}

<img
  class="emotion-0"
  src="http://placehold.it/350x150"
/>
`;

exports[`Storyshots Addons|A11y/Typography Correct 1`] = `
Array [
  .emotion-0 {
  color: currentColor;
  font-weight: normal;
  font-family: "Nunito Sans",-apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0;
  line-height: 1.2em;
  display: block;
  color: #333;
  line-height: 1em;
}

.emotion-0 > sub {
  display: block;
  padding-top: 5px;
  line-height: 1.2em;
  font-size: 14px;
}

.emotion-0 > sub {
  color: rgba(0,0,0,0.4);
}

<header
    class="emotion-1"
  >
    <h1
      class="emotion-0"
    >
      <span>
        Testing the a11y addon
      </span>
    </h1>
  </header>,
  .emotion-0 {
  color: inherit;
}

<p
    class="emotion-0"
  >
    Testing the a11y addon
  </p>,
  .emotion-0 {
  color: inherit;
}

<a
    class="emotion-0"
    href="javascript:void 0"
  >
    Testing the a11y addon...
  </a>,
]
`;

exports[`Storyshots Addons|A11y/Typography Empty Heading 1`] = `
.emotion-0 {
  color: currentColor;
  font-weight: normal;
  font-family: "Nunito Sans",-apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0;
  line-height: 1.2em;
  display: block;
  color: #333;
  line-height: 1em;
}

.emotion-0 > sub {
  display: block;
  padding-top: 5px;
  line-height: 1.2em;
  font-size: 14px;
}

.emotion-0 > sub {
  color: rgba(0,0,0,0.4);
}

<header
  class="emotion-1"
>
  <h1
    class="emotion-0"
  />
</header>
`;

exports[`Storyshots Addons|A11y/Typography Empty Link 1`] = `
.emotion-0 {
  color: inherit;
}

<a
  class="emotion-0"
  href="javascript:void 0"
/>
`;

exports[`Storyshots Addons|A11y/Typography Empty Paragraph 1`] = `
.emotion-0 {
  color: inherit;
}

<p
  class="emotion-0"
/>
`;

exports[`Storyshots Addons|A11y/Typography Link without href 1`] = `
.emotion-0 {
  color: inherit;
}

<a
  class="emotion-0"
>
  Testing the a11y addon...
</a>
`;
